objects/Response_RAIT__c.object
<CustomObject>
    <description>Holds survey responses from Survey Gizmo for  pre and post RAIT</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Participant__r.Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Responses RAIT</relationshipLabel>
        <relationshipName>Responses_RAIT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>RAIT Responses</relationshipLabel>
        <relationshipName>Responses_RAIT</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pre_or_Post__c</fullName>
        <inlineHelpText>select if the survey is pre or post</inlineHelpText>
        <label>Pre or Post</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_PFQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Response PFQ</label>
        <referenceTo>Response_PFQ__c</referenceTo>
        <relationshipLabel>RAIT Responses</relationshipLabel>
        <relationshipName>Responses_RAIT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_response_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <label>Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X10_Presentation_style_of_the_trainer__c</fullName>
        <description>10. Presentation style of the trainer</description>
        <inlineHelpText>10. Presentation style of the trainer</inlineHelpText>
        <label>10. Presentation style of the trainer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X11_The_training_being_valuable_to_me__c</fullName>
        <description>11. The training being valuable to me</description>
        <inlineHelpText>11. The training being valuable to me</inlineHelpText>
        <label>11. The training being valuable to me</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_Clarity_of_visual_presentation_char__c</fullName>
        <description>12. Clarity of visual presentation, charts, written materials</description>
        <inlineHelpText>12. Clarity of visual presentation, charts, written materials</inlineHelpText>
        <label>12. Clarity of visual presentation, char</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X13_Being_encouraged_to_participate_duri__c</fullName>
        <description>13. Being encouraged to participate during the training</description>
        <inlineHelpText>13. Being encouraged to participate during the training</inlineHelpText>
        <label>13. Being encouraged to participate duri</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X14_Integration_of_humour__c</fullName>
        <description>14. Integration of humour</description>
        <inlineHelpText>14. Integration of humour</inlineHelpText>
        <label>14. Integration of humour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X15_Pace_of_learning__c</fullName>
        <description>15. Pace of learning</description>
        <inlineHelpText>15. Pace of learning</inlineHelpText>
        <label>15. Pace of learning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X16_Trainer_s_ability_to_hold_my_interes__c</fullName>
        <description>16. Trainer’s ability to hold my interest</description>
        <inlineHelpText>16. Trainer’s ability to hold my interest</inlineHelpText>
        <label>16. Trainer’s ability to hold my interes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X17_Trainer_able_to_build_trust_during_t__c</fullName>
        <description>17. Trainer able to build trust during the program</description>
        <inlineHelpText>17. Trainer able to build trust during the program</inlineHelpText>
        <label>17. Trainer able to build trust during t</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_Noise_Quiet_levels_in_the_training__c</fullName>
        <description>18. Noise / Quiet levels in the training room</description>
        <inlineHelpText>18. Noise / Quiet levels in the training room</inlineHelpText>
        <label>18. Noise / Quiet levels in the training</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X19_Trainer_displays_clear_understanding__c</fullName>
        <description>19. Trainer displays clear understanding</description>
        <inlineHelpText>19. Trainer displays clear understanding</inlineHelpText>
        <label>19. Trainer displays clear understanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_My_company_believes_in_this_sort_of_t__c</fullName>
        <description>1. My company believes in this sort of training?</description>
        <inlineHelpText>1. My company believes in this sort of training?</inlineHelpText>
        <label>1. My company believes in this sort of t</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X20_Feeling_involved_during_the_program__c</fullName>
        <description>20. Feeling involved during the program</description>
        <inlineHelpText>20. Feeling involved during the program</inlineHelpText>
        <label>20. Feeling involved during the program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21_Quality_of_training_facilities__c</fullName>
        <description>21. Quality of training facilities</description>
        <inlineHelpText>21. Quality of training facilities</inlineHelpText>
        <label>21. Quality of training facilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X22_Trainer_s_knowledge_of_subject_and_m__c</fullName>
        <description>22. Trainer&apos;s knowledge of subject and materials</description>
        <inlineHelpText>22. Trainer&apos;s knowledge of subject and materials</inlineHelpText>
        <label>22. Trainer&apos;s knowledge of subject and m</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X23_Key_learnings_being_taken_in_and_sti__c</fullName>
        <description>23. Key learnings being taken in and sticking</description>
        <inlineHelpText>23. Key learnings being taken in and sticking</inlineHelpText>
        <label>23. Key learnings being taken in and sti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X24_Training_format_e_g_1_full_day_ver__c</fullName>
        <description>24. Training format, e.g. 1 full day versus 2 half days, etc.</description>
        <inlineHelpText>24. Training format, e.g. 1 full day versus 2 half days, etc.</inlineHelpText>
        <label>24. Training format, e.g. 1 full day ver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X25_Trainer_provides_support_during_prog__c</fullName>
        <description>25. Trainer provides support during program</description>
        <inlineHelpText>25. Trainer provides support during program</inlineHelpText>
        <label>25. Trainer provides support during prog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X26_Trainer_uses_active_listening_ques__c</fullName>
        <description>26. Trainer uses active listening / questioning and exploration</description>
        <inlineHelpText>26. Trainer uses active listening / questioning and exploration</inlineHelpText>
        <label>26. Trainer uses active listening / ques</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X27_Time_in_program_to_practice_learning__c</fullName>
        <description>27. Time in program to practice learnings</description>
        <inlineHelpText>27. Time in program to practice learnings</inlineHelpText>
        <label>27. Time in program to practice learning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X28_Maintaining_your_understanding_durin__c</fullName>
        <description>28. Maintaining your understanding during the program</description>
        <inlineHelpText>28. Maintaining your understanding during the program</inlineHelpText>
        <label>28. Maintaining your understanding durin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X29_Coming_away_from_the_program_with_ne__c</fullName>
        <description>29. Coming away from the program with new knowledge and understanding</description>
        <inlineHelpText>29. Coming away from the program with new knowledge and understanding</inlineHelpText>
        <label>29. Coming away from the program with ne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_Understanding_how_this_training_will__c</fullName>
        <description>Understanding how this training will impact my organisation</description>
        <inlineHelpText>Understanding how this training will impact my organisation</inlineHelpText>
        <label>2. Understanding how this training will</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X30_Temperature_of_training_room__c</fullName>
        <description>30. Temperature of training room</description>
        <inlineHelpText>30. Temperature of training room</inlineHelpText>
        <label>30. Temperature of training room</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_The_comfort_of_the_seating__c</fullName>
        <description>3 The comfort of the seating</description>
        <inlineHelpText>3 The comfort of the seating</inlineHelpText>
        <label>3 The comfort of the seating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4_What_I_have_learnt_is_transferable_in__c</fullName>
        <description>4. What I have learnt is transferable into my organisation</description>
        <inlineHelpText>4. What I have learnt is transferable into my organisation</inlineHelpText>
        <label>4. What I have learnt is transferable in</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Concepts_are_able_to_be_communicated__c</fullName>
        <description>5. Concepts are able to be communicated by the trainer</description>
        <inlineHelpText>5. Concepts are able to be communicated by the trainer</inlineHelpText>
        <label>5. Concepts are able to be communicated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X6_The_lighting_in_the_room__c</fullName>
        <description>6. The lighting in the room</description>
        <inlineHelpText>6. The lighting in the room</inlineHelpText>
        <label>6. The lighting in the room</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X7_I_know_what_is_expected_of_me_back_at__c</fullName>
        <description>7. I know what is expected of me back at work as a result of this training</description>
        <inlineHelpText>7. I know what is expected of me back at work as a result of this training</inlineHelpText>
        <label>7. I know what is expected of me back at</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X8_Stimulating_content__c</fullName>
        <description>8. Stimulating content</description>
        <inlineHelpText>8. Stimulating content</inlineHelpText>
        <label>8. Stimulating content</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X9_The_ambience_overall_feeling_of_the__c</fullName>
        <description>9. The ambience (overall feeling) of the training room</description>
        <inlineHelpText>9. The ambience (overall feeling) of the training room</inlineHelpText>
        <label>9. The ambience (overall feeling) of the</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Response RAIT</label>
    <nameField>
        <displayFormat>R-RAIT-{000000000}</displayFormat>
        <label>Response RAIT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses RAIT</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>